--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<header><div>ToDo</div></header>
 <div class="container">
-  <app-to-do-list></app-to-do-list>
-  <app-to-do-page></app-to-do-page>
+  <app-to-do-list class="list"></app-to-do-list>
+  <app-to-do-page class="page"></app-to-do-page>
 </div>
