--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,22 @@
-header {
-    background-color: black;
-    color : white;
-    font-size : 30px;
-    width : 100%;
-    height : 50px;
-
-    div {
-        padding-left : 20px;
-        line-height: 50px;
-        height : 100%;
-    }
-}
-
 .container {
     width : 100%;
+    margin: 0;
+    padding : 0;
+    display: flex;
+    justify-content: center;
+}
+
+.page {
+    width : 80%;
+    height: 1000px;
+    background: #020631;
+}
+
+.list {
+    background-color: #020631;
+    height: 1000px;
+    width : 20%;
+    border-right: solid;
+    border-right-width: 2px;
+    border-right-color: black;
 }
