--- a/src/app/feature/to-do-list/to-do-list.component.scss
+++ b/src/app/feature/to-do-list/to-do-list.component.scss
@@ -1,16 +1,12 @@
-.menu {
-    height: 100%;
-    width : 20%;
-    border-right: solid;
-    border-right-width: 2px;
-    border-right-color: black;
-}
 
-button {
+.pageItem {
     width : 100%;
-    height : 50px;
+    height : 25px;
     font-size : 20px;
     border-radius : 0px;
     border-width :0;
     border-bottom-width: 1px;
+    text-align: center;
+    color: white;
+    vertical-align: middle;
 }
